2003-07-23  Sam Steingold  <sds@gnu.org>

	* record.d (fehler_record_length): fixed stack

2003-07-21  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): use shell_quote() and real_path()
	for CreateProcess()
	* w32shell.c: new file (extracted from pathname.d)
	* makemake.in (clisp) [WIN32_NATIVE]: put the icon into the
	executable; depend on w32shell.c
	(pathname.o) [WIN32_NATIVE]: depend on w32shell.c
	* pathname.d, spvw_memfile.d [WIN32_NATIVE]:
	renamed TrueName() to real_path()

2003-07-18  Sam Steingold  <sds@gnu.org>

	* condition.lisp (check-value): CONTINUE :INTERACTIVE
	ASSERT-RESTART-NO-PROMPTS to avoid infinite loops

2003-07-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (.gdbinit): substitute ${LEXE} for .run on w32
	(lisp.a): do not use lisp.o on w32 because it leads to a crash on
	the first statement in main() (when built --with-debug)

2003-07-16  Sam Steingold  <sds@gnu.org>

	* spvw.d (SP_ueber, STACK_ueber): flush stderr and guard fputs()
	and fflush() with begin_system_call()/end_system_call()

2003-07-15  John Hinsdale <hin@alma.com>

	* modules/oracle/orafns.c,oracle.lisp: support access to
	Oracle's LONG, RAW and LONG RAW data types

2003-07-10  Sam Steingold  <sds@gnu.org>

	* comptran.d (N_sin_N, N_cos_N): fixed GC-safety bugs

2003-07-10  Sam Steingold  <sds@gnu.org>

	* error.d (check_fdefinition): handle :CONTINUE restart from
	check_value()
	* condition.lisp (check-value): permit :CONTINUE restart when the
	place is (FDEFINITION ...)

2003-07-09  Sam Steingold  <sds@gnu.org>

	* errwin32.d (OS_error, OS_file_error, SOCK_error):
	avoid a warning by calling NOTREACHED at the end

2003-07-08  Sam Steingold  <sds@gnu.org>

	* configure: pass --win32gcc to makemake instead of ${target}
	* makemake.in: rely on autoconf for win32gcc

2003-07-08  Sam Steingold  <sds@gnu.org>

	* predtype.d (equalp): fixed a crash in (EQUALP '(0 1) '(#P""))

2003-07-08  Sam Steingold  <sds@gnu.org>

	* m4/filecharset.m4: avloid ":" on __MINGW32__